bynkc/tests/fixtures/positive/06_refined_string_minlength/input.bynk
commons demo {
  type Password = String where MinLength(8)
}
