bynkc/tests/fixtures/negative/03_negative_length/input.bynk
commons demo {
  type Bad = String where MinLength(-1)
}
